# MiniEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/Models/: sphere.mtl
Assets/Scenes/: simple_stage.suplex  simple_stage_resize.suplex
Assets/Shaders/: bloom_downsample.frag  bloom_upsample.frag  brdf_integration.frag  common.vert  cubemap.frag  cubemap.vert  debug.frag  debug.vert  depth.frag  depth.vert  diffuse_integration.frag  equirectangularMap.frag  light.frag  line.frag  line.vert  outline.frag  pbr.frag  phong.frag  phong.vert  postprocess.frag  prefilter.frag  prefilter.vert  quad.frag  quad.vert  raymarching.frag  shadow.frag  shadow.vert  ssao.frag  toon.frag  toon.vert
Editor/src/: Editor.cpp  EditorLayer.cpp  EditorLayer.hpp
Editor/src/Panel/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  Panel.hpp  SceneHirarchyPanel.cpp  SceneHirarchyPanel.hpp
Editor/src/Platform/Windows/: FileDialogs.cpp  FileDialogs.hpp
Editor/src/Widget/: CommonWidget.cpp  CommonWidget.hpp
Runtime/src/: Application.cpp  Application.hpp  EntryPoint.hpp  UUID.cpp  UUID.hpp
Runtime/src/Animation/Animation/: Animation.hpp
Runtime/src/Animation/Animator/: Animator.hpp
Runtime/src/Animation/Bone/: Bone.hpp
Runtime/src/InputSystem/: Input.cpp  Input.h  KeyCodes.h
Runtime/src/Layer/: Layer.hpp
Runtime/src/Random/: Random.cpp  Random.hpp
Runtime/src/Render/: RHI.hpp  Renderer.cpp  Renderer.hpp
Runtime/src/Render/Buffer/: Buffer.hpp  Depthbuffer.cpp  Depthbuffer.hpp  Framebuffer.cpp  Framebuffer.hpp  HdrFramebuffer.cpp  HdrFramebuffer.hpp
Runtime/src/Render/Camera/: Camera.cpp  Camera.hpp  LightCamera.hpp
Runtime/src/Render/Config/: Config.hpp
Runtime/src/Render/Geometry/: Mesh.hpp  Model.hpp  Scene.hpp
Runtime/src/Render/Geometry/Shape/: Shape.cpp  Shape.hpp
Runtime/src/Render/Material/: Material.hpp
Runtime/src/Render/Pipeline/: Pipeline.hpp
Runtime/src/Render/Postprocess/: Bloom.hpp  Noise.hpp  PostProcess.hpp
Runtime/src/Render/RenderPass/: CubeMapPass.hpp  ForwardPass.cpp  ForwardPass.hpp  PostprocessPass.hpp  PrecomputePass.hpp  RenderPass.hpp  SSAOPass.hpp
Runtime/src/Render/Shader/: Shader.hpp
Runtime/src/Render/Texture/: CubeMap.hpp  Texture.hpp  Texture2D.hpp
Runtime/src/Scene/: Scene.cpp  Scene.hpp  SceneSerilizer.cpp  SceneSerilizer.hpp
Runtime/src/Scene/Component/: Component.hpp
Runtime/src/Scene/Entity/: Entity.cpp  Entity.hpp
Runtime/src/Time/: Timer.h
Sandbox/src/: main.cpp
Utility/JSON/src/: JsonParser.hpp
Utils/src/JSON/: JsonParser.hpp
